<resources>
    <string name="app_name">BuzzBee</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Onboarding-->
    <string name="onOne">Communication skills</string>
    <string name="onThree">Diverse vocabulary</string>
    <string name="onTwo">Target </string>
    <string name="descriptionOne">Standard pronunciation and common communication sentences help you communicate with confidence</string>
    <string name="descriptionThree">With a variety of economic and information technology topics, you can study anytime, anywhere.</string>
    <string name="descriptionTwo">Clear progress goals make it easier for you to manage your progress</string>
    <string name="next">Next</string>
    <string name="label_text_skip">Skip</string>

    <!--    Login and SignUp -->
    <string name="oldpassword">Old Password</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="newpassword">New Password</string>
    <string name="changepassword">Change Password</string>
    <string name="label_signup">Create your account</string>
    <string name="label_signin">Login to your account</string>
    <string name="label_signWith">- or sign in with -</string>
    <string name="label_question_not_account">Don\'t have an account.</string>
    <string name="label_question_have_account">Have an account.</string>
    <string name="label_button_login">LOGIN</string>
    <string name="label_button_signup">SIGNUP</string>
    <string name="label_change_activity_signup">Sign Up</string>
    <string name="label_change_activity_signin">Sign In</string>
    <string name="label_hint_email">Email</string>
    <string name="label_hint_password">Password</string>
    <string name="label_hint_confirm_password">Confirm Password</string>
    <string name="description_image_logo">Logo</string>
    <!--    Home Fragment -->
    <string name="label_hint_search">Sound,Topic …</string>
    <string name="label_new">New</string>
    <string name="label_audio">Audio</string>
    <string name="label_recommend">Recommed</string>
    <!--    Menu-->
    <string name="title_item_menu_change_password">Change the password</string>
    <string name="title_item_menu_change_avata">Change the avata</string>
    <string name="title_item_menu_logout">Logout</string>
    <!-- Menu BottomNavigator   -->
    <string name="lable_item_menu_bottomnavigator_home">Home</string>
    <string name="lable_item_menu_bottomnavigator_Progressive">Progressive</string>
    <string name="label_item_menu_bottomnavigator_chat">Chat</string>
    <string name="lable_item_menu_bottomnavigator_topic">Topic</string>
    <string name="lable_item_menu_bottomnavigator_audio">Audio</string>
    <string name="lable_item_menu_bottomnavigator_profile">Profile</string>
    <string name="description_image">this is image</string>
    <!--    Text Level-->
    <string name="label_level_beginer">Beginer</string>
    <string name="label_level_HighBeginer">High Beginer</string>
    <string name="label_level_low_intermadiate">Low Intermadiate</string>
    <string name="label_level_intermadicate">Intermadiate</string>
    <string name="label_level_high_intermadiate">High Intermadiate</string>
    <string name="label_level_low_advanced">Low advanced</string>
    <string name="label_level_advanced">Advanced</string>
    <string name="label_level_high_advanced">High advanced</string>
    <string name="label_define">Define</string>
    <string name="label_title_terms_of_use">terms of use</string>
    <string name="label_title_policy">Policy</string>
    <string name="label_title_statistical">Statistical</string>
    <string name="label_title_account_information">Information</string>
    <string name="label_title_vocabulary">Vocabulary</string>
    <string name="label_title_logout">Logout</string>
    <string name="text_label_recommend">Recommend</string>
    <string name="text_label_popular">Popular</string>
    <string name="text_label_new">New</string>
    <string name="label_button_review">Review</string>
    <string name="lable_button_check">Check</string>
    <string name="title_activity_finish_review_screen">FinishReviewScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="label_button_complete">Complete</string>
</resources>
