<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home"
        android:title="@string/lable_item_menu_bottomnavigator_home"
        android:icon="@drawable/icon_item_bottom_navigator_home_24"/>
    <item
        android:id="@+id/item_learnig_topic"
        android:title="@string/lable_item_menu_bottomnavigator_topic"
        android:icon="@drawable/icon_bottom_navigator_topic_24"/>
    <item
        android:id="@+id/item_audio"
        android:title="@string/lable_item_menu_bottomnavigator_audio"
        android:icon="@drawable/icon_item_bottom_navigator_voice_24"/>
    <item
        android:id="@+id/item_chat"
        android:title="@string/label_item_menu_bottomnavigator_chat"
        android:icon="@drawable/icon_bottom_navigator_chat_24"/>
    <item
        android:id="@+id/item_profile"
        android:title="@string/lable_item_menu_bottomnavigator_profile"
        android:icon="@drawable/icon_item_bottom_navigator_profile_24"/>
</menu>