<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:background="@color/white"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Screen.AuthScreen.LoginScreen">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
<LinearLayout
    android:weightSum="5"
    android:id="@+id/rlLayout"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_weight="1.5"
        android:id="@+id/logo"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/splash_buzzbee"/>
    <LinearLayout
        android:layout_weight="2.5"
        android:layout_below="@id/logo"
        android:id="@+id/lnLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <TextView
            android:layout_below="@id/logo"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_signin"
            android:id="@+id/mtxTtile"
            android:textSize="20dp"
            android:textColor="#090909"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_below="@id/mtxTtile"
            android:id="@+id/medGmail"
            android:textColorHint="@color/hint_color"
            app:hintAnimationEnabled="true"
            android:hint="@string/label_hint_email"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_custom"
            android:layout_height="@dimen/height_text_input_edittext_50dp"
            android:paddingLeft="@dimen/padding_left_15dp"
            android:inputType="textEmailAddress"
            app:errorEnabled="true">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="10dp"
            android:layout_below="@id/medGmail"
            android:layout_width="match_parent"
            android:id="@+id/medPassword"
            android:hint="@string/label_hint_password"
            android:textColorHint="@color/hint_color"
            app:passwordToggleEnabled="true"
            android:layout_height="@dimen/height_text_input_edittext_50dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_custom"
            android:paddingLeft="@dimen/padding_left_15dp"
            app:errorEnabled="true">
        </com.google.android.material.textfield.TextInputEditText>
        <Button
            android:layout_marginTop="@dimen/margin_top_10dp"
            android:background="@drawable/button_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mbtnLg"
            android:textColor="#ffffffff"
            android:text="@string/label_button_login"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/txsignwith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_signWith"/>
        <include
            android:id="@+id/bottomLayoutButtonSignInWith"
            layout="@layout/bottomlayoutlogin"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@id/bottomLayoutButtonSignInWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="right"
                android:layout_marginLeft="@dimen/padding_left_15dp"
                android:textSize="@dimen/text_size_label_question_sign_with_15dp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:id="@+id/mtxquestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_question_not_account"
                tools:ignore="SpUsage" />
            <TextView
                android:layout_marginLeft="8dp"
                android:textSize="@dimen/text_size_label_sign_with_18dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:id="@+id/mtxChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_change_activity_signup"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
</LinearLayout>
    </LinearLayout>