<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".screen.authscreen.ChangePasswordScreen">
    <TextView
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changepassword"/>
    <com.google.android.material.textfield.TextInputEditText
        android:paddingStart="@dimen/padding_10dp"
        android:drawablePadding="@dimen/padding_10dp"
        android:drawableStart="@drawable/ic_lock_outline_blue_24dp"
        android:background="@drawable/edittext_custom"
        android:layout_marginTop="40dp"
        android:layout_below="@id/titleChangePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/label_hint_email"
        android:id="@+id/edoldpassword"/>
    <com.google.android.material.textfield.TextInputEditText
        android:paddingStart="@dimen/padding_10dp"
        android:drawablePadding="@dimen/padding_10dp"
        android:drawableStart="@drawable/ic_lock_outline_blue_24dp"
        android:background="@drawable/edittext_custom"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edoldpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:id="@+id/ednewpassword"/>
    <com.google.android.material.textfield.TextInputEditText
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding_10dp"
        android:drawablePadding="@dimen/padding_10dp"
        android:drawableStart="@drawable/ic_lock_outline_blue_24dp"
        android:background="@drawable/edittext_custom"
        android:layout_marginTop="10dp"
        android:layout_below="@id/ednewpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirmpassword"
        android:id="@+id/edconfirmpassword"/>

    <Button
        android:layout_marginTop="40dp"
        android:background="@drawable/button_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edconfirmpassword"
        android:id="@+id/btnChangePassword"
        android:text="@string/changepassword"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:loader_animDur="100"
        app:loader_bigCircleRadius="42dp"
        app:loader_circleRadius="14dp"
        app:loader_defaultColor="@color/colorPrimary"
        app:loader_firstShadowColor="@color/yellow"
        app:loader_secondShadowColor="@color/grey"
        app:loader_selectedColor="@color/blue_sky_color"
        app:loader_showRunningShadow="true" />
</RelativeLayout>