<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_5dp"
        android:id="@+id/headNotificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_centerVertical="true"
            android:id="@+id/icon_short_text"
            android:layout_width="@dimen/icon_size_36dp"
            android:layout_height="@dimen/icon_size_36dp"
            app:cardCornerRadius="@dimen/cardView_radiu_100dp"
            android:background="#3E4245">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_short_text_blue_24dp"/>
        </androidx.cardview.widget.CardView>
        <FrameLayout
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_left_20dp"
            android:layout_toStartOf="@id/imgAvata"
            android:layout_width="@dimen/icon_size_24dp"
            android:layout_height="@dimen/icon_size_24dp">
            <ImageView
                android:src="@drawable/ic_notifications_none_grey_24dp"
                android:layout_width="@dimen/icon_size_24dp"
                android:layout_height="@dimen/icon_size_24dp"
                android:id="@+id/imgNotification"
                android:scaleType="centerCrop"
                android:contentDescription="TODO" />
            <TextView
                android:background="@drawable/notification_background"
                android:textStyle="bold"
                android:layout_width="@dimen/width_text_10dp"
                android:layout_height="@dimen/height_text_10dp"
                android:layout_gravity="top|right"/>
            <TextView
                android:textAlignment="center"
                android:textSize="@dimen/text_size_notification_8sp"
                android:textStyle="bold"
                android:textColor="@color/notification_color"
                android:layout_width="@dimen/width_text_10dp"
                android:layout_height="@dimen/height_text_10dp"
                android:layout_gravity="top|right"
                android:text="1"
                tools:ignore="RtlCompat" />
        </FrameLayout>
        <androidx.cardview.widget.CardView
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/icon_size_48dp"
            android:layout_height="@dimen/icon_size_48dp"
            android:id="@+id/imgAvata"
            app:cardCornerRadius="@dimen/cardView_radiu_100dp">
            <ImageView
                android:id="@+id/avata_home_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/defaultavata"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/headNotificationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.material.appbar.AppBarLayout
            app:elevation="0dp"
            android:id="@+id/appbar_layout"
            app:layout_insetEdge="none"
            android:elevation="0dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                app:layout_scrollFlags="scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                    <RelativeLayout
                        android:padding="@dimen/padding_5dp"
                        android:id="@+id/layout_welcome"
                        android:layout_marginTop="@dimen/margin_top_10dp"
                        app:layout_collapseMode="pin"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="@dimen/text_size_label_title_18dp"
                            android:id="@+id/txwelcome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Welcome back"/>
                        <TextView
                            android:textColor="#98a6b8"
                            android:id="@+id/txAppName"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size_20dp"
                            android:layout_below="@id/txwelcome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="BuzzBee"/>
                        <EditText
                            android:maxLines="1"
                            android:focusable="true"
                            android:defaultFocusHighlightEnabled="true"
                            android:paddingStart="@dimen/padding_left_10dp"
                            android:textColorHint="#000000"
                            android:layout_marginTop="@dimen/margin_top_20dp"
                            android:background="@drawable/search_ed"
                            android:layout_below="@id/txAppName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_text_input_edittext_50dp"
                            android:drawableStart="@drawable/ic_search_black_24dp"
                            android:hint="@string/label_hint_search"
                            android:drawablePadding="@dimen/padding_left_15dp"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>
                </RelativeLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/appbar_layout">
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_label_title_20sp"
                    android:paddingStart="20dp"
                    android:id="@+id/tx_recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_recommend"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_top_5dp"
                    android:layout_below="@id/tx_recommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recommend_recycler_view"/>

                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_label_title_20sp"
                    android:paddingStart="20dp"
                    android:layout_marginTop="@dimen/margin_top_15dp"
                    android:layout_below="@id/recommend_recycler_view"
                    android:id="@+id/tx_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_popular"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_below="@id/tx_popular"
                    android:layout_marginTop="@dimen/margin_top_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/popular_recycler_view"/>

                <TextView
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_label_title_20sp"
                    android:paddingStart="20dp"
                    android:layout_marginTop="@dimen/margin_top_15dp"
                    android:layout_below="@id/popular_recycler_view"
                    android:id="@+id/tx_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_new"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_top_5dp"
                    android:layout_below="@id/tx_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_recycler_view"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>